UI: Fix button layout to avoid text clipping

--- a/assets/css/scss/atoms/_buttons.scss
+++ b/assets/css/scss/atoms/_buttons.scss
@@ -264,7 +264,7 @@ $border-color_12: #9333EA;
   }
 
   .p-button-label {
-    @apply align-middle flex-none font-semibold hidden
+    @apply align-middle font-semibold hidden
       md:inline;
   }
 
